overlays/dev/frontend/merge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    app: frontend
spec:
  ingressClassName: nginx
  rules:
  - host: development.medkick-rpm.com
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - development.medkick-rpm.com
    secretName: www-dev-medkick-rpm-com-tls
